--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -70,6 +70,8 @@
       display: flex;
       flex-direction: column;
       text-align: center;
+      position: relative;
+      z-index: 9;
 
       @include for-lg {
         display: block;
