--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -119,7 +119,7 @@ body {
         padding: 15px 25px;
         color: #000;
         background-color: #ffdd00;
-        border-radius: 15px;
+        border-radius: 50px;
 
         @include for-md {
             font-size: 18px;
@@ -145,5 +145,15 @@ body {
     .loader-animation {
         width: 50px;
         height: 50px;
+    }
+}
+
+.clients {
+    margin-top: 100px;
+
+    .client-image {
+        img {
+            width: 100%;
+        }
     }
 }
