--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -6,27 +6,34 @@
   padding: 0 0 100px;
 
   .contact-button {
+    margin-top: 30px;
     max-width: calc(275px - 60px);
     transition: .5s ease-in-out;
-    border-radius: 15px;
+    border-radius: 50px;
+    padding: 15px 50px;
+    background-color: #ffdd00;
 
     @include for-md {
       max-width: calc(350px - 60px);
-      border-radius: 20px;
+      border-radius: 50px;
     }
 
-    .contact-button-image a {
-      display: flex;
-    }
+    a {
+      font-size: 30px;
+      text-decoration: none;
+      font-style: italic;
+      font-weight: 900;
+      color: #000;
 
-    img {
-      width: 100%;
+      @include for-md {
+        font-size: 50px;
+      }
     }
 
     &:hover {
       cursor: pointer;
       transform: translateY(-5px);
-      box-shadow: 0 10px 30px 4px $color-secondary;
+      box-shadow: 0 10px 30px 4px #ffdd00;
     }
   }
 
@@ -35,11 +42,11 @@
 
     h3 {
       color: #fff;
-      font-size: 30px;
+      font-size: 20px;
       margin: 0;
 
       @include for-md {
-        font-size: 50px;
+        font-size: 40px;
       }
     }
 
