--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -40,3 +40,36 @@
     transform: rotate(180deg);
   }
 }
+
+.portfolio-button {
+  margin: 30px auto 0;
+  max-width: calc(275px - 60px);
+  transition: .5s ease-in-out;
+  border-radius: 50px;
+  padding: 15px 50px;
+  background-color: #fe0000;
+  text-align: center;
+
+  @include for-md {
+    max-width: calc(350px - 60px);
+    border-radius: 50px;
+  }
+
+  a {
+    font-size: 30px;
+    text-decoration: none;
+    font-style: italic;
+    font-weight: 900;
+    color: #fff;
+
+    @include for-md {
+      font-size: 50px;
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    transform: translateY(-5px);
+    box-shadow: 0 10px 30px 4px #fe0000;
+  }
+}
