--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -363,13 +363,22 @@
   .services {
     max-width: 700px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     margin: auto;
+
+    @include for-lg {
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
 
     span {
       font-style: italic;
+      font-size: 16px;
       line-height: 1;
     }
   }
