--- a/src/assets/scss/_tags.scss
+++ b/src/assets/scss/_tags.scss
@@ -4,6 +4,7 @@
   gap: 5px;
   justify-content: center;
   margin: 20px auto;
+  max-width: 900px;
 
   @include for-md {
     gap: 10px;
@@ -20,24 +21,14 @@
     color: #fff;
     opacity: 0.5;
     transition: .5s ease-in-out;
-    border-radius: 10px;
-    border: 1px solid #fff;
     padding: 5px 10px;
 
     @include for-md {
       font-size: 23px;
-      border-radius: 15px;;
     }
 
     &:hover {
       opacity: 1;
-      transform: translateY(-2px);
-      box-shadow: 0 5px 10px 4px var(--second-color);
-
-      @include for-md {
-        transform: translateY(-5px);
-        box-shadow:0 10px 30px 4px $color-secondary;
-      }
     }
 
     &.router-link-active {
