--- a/src/assets/scss/_slider.scss
+++ b/src/assets/scss/_slider.scss
@@ -31,4 +31,12 @@
       }
     }
   }
+
+  .vertical-line {
+    margin: auto;
+    background-color: #ffdd00;
+    height: 225px;
+    width: 2px;
+    position: relative;
+  }
 }
