--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -60,4 +60,47 @@
         color: #fff;
         font-size: 16px;
     }
+
+    .colors {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 30px;
+
+        .color-item {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            overflow: hidden;
+
+            &:nth-of-type(1) {
+                background-color: #4d00ff;
+            }
+            &:nth-of-type(2) {
+                background-color: #ff1f5e;
+            }
+            &:nth-of-type(3) {
+                background-color: #ff6400;
+            }
+            &:nth-of-type(4) {
+                background-color: #ffdd00;
+            }
+            &:nth-of-type(5) {
+                background-color: #a0fa00;
+            }
+            &:nth-of-type(6) {
+                background-color: #00bf1a;
+            }
+            &:nth-of-type(7) {
+                background-color: #74e5ff;
+            }
+            &:nth-of-type(8) {
+                background-color: #0086ff;
+            }
+            &:nth-of-type(9) {
+                background-color: #4f5c7d;
+            }
+
+        }
+    }
 }
