--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -4,8 +4,6 @@
   background-color: #000;
 
   .stock-block-title {
-    margin-bottom: 100px;
-
     h2 {
       font-size: 34px;
       font-style: italic;
@@ -16,6 +14,19 @@
 
       @include for-lg {
         font-size: 80px;
+      }
+    }
+
+    h3 {
+      font-size: 20px;
+      color: #fff;
+      line-height: 1;
+      text-align: center;
+      margin: 0 auto 15px;
+      font-weight: 200;
+
+      @include for-lg {
+        font-size: 40px;
       }
     }
   }
