--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 0 100px;
+  padding: 100px 0;
 
   .contact-button {
     margin-top: 30px;
