--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -3,6 +3,11 @@
   justify-content: center;
   gap: 30px;
   flex-wrap: wrap;
+  margin-bottom: 50px;
+
+  @include for-lg {
+    margin-bottom: 100px;
+  }
 
   .membership-block-title {
     width: 100%;
