Revice portfolio adjustments

--- a/src/assets/scss/_collapse.scss
+++ b/src/assets/scss/_collapse.scss
@@ -49,6 +49,8 @@
   .el-collapse-item__content {
     font-size: 16px;
     text-align: center;
+    color: #fff;
+    opacity: 0.5;
   }
 
   .el-collapse-item__wrap {
