--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   padding: 100px 0;
+  height: 100vh;
+  min-height: 700px;
 
   .contact-button {
     margin-top: 30px;
