--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -45,6 +45,8 @@
         width: 15px;
         height: 15px;
         background-color: #00bf1a;
+        box-shadow: 0 0 0 #00bf1a;
+        animation: pulse 1s infinite;
       }
 
       .slot-text {
@@ -346,11 +348,18 @@
     gap: 20px;
     margin: auto;
 
+    div {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
     @include for-lg {
       flex-direction: row;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 30px;
+      gap: 20px;
     }
 
 
@@ -413,5 +422,31 @@
       transform: translateY(-5px);
       box-shadow: 0 10px 30px 4px #fe0000;
     }
+  }
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgb(0, 191, 26);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 5px rgba(0, 191, 26, 0.5);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+    box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+  }
+  50% {
+    -moz-box-shadow: 0 0 0 5px rgba(0, 191, 26, 0.5);
+    box-shadow: 0 0 0 5px rgba(0, 191, 26, 0.5);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+    box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
   }
 }
