--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -24,7 +24,7 @@
 }
 
 .portfolio-video {
-  margin: 50px auto 50px;
+  margin: 50px auto 0;
   display: flex;
   justify-content: center;
   max-width: 600px;
