--- a/src/assets/scss/_tags.scss
+++ b/src/assets/scss/_tags.scss
@@ -3,12 +3,12 @@
   flex-wrap: wrap;
   gap: 5px;
   justify-content: center;
-  margin: 20px auto;
+  margin: 0 auto 20px;
   max-width: 900px;
 
   @include for-md {
     gap: 10px;
-    margin: 40px auto;
+    margin: 0 auto 40px;
   }
 
   .tag-item {
