--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -82,12 +82,6 @@
     max-width: unset;
     margin: unset;
   }
-
-  &.move-down {
-    @include for-lg {
-      margin-top: 100px;
-    }
-  }
 }
 
 .membership-block {
@@ -262,8 +256,12 @@
   &-content {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 50px;
     margin-top: 80px;
+
+    @include for-lg {
+      gap: 30px;
+    }
   }
 
   &-item {
@@ -280,14 +278,14 @@
 
     &.move-down {
       @include for-lg {
-        margin-top: 100px;
+        margin-top: 30px;
       }
     }
   }
 
   &-image {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     margin: 0 auto 30px;
 
     img {
@@ -301,7 +299,6 @@
       font-size: 24px;
       text-transform: uppercase;
       font-weight: 900;
-      font-style: italic;
       margin: 0 0 10px;
       line-height: 1.3;
 
@@ -350,9 +347,15 @@
 
     div {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
       flex-wrap: wrap;
       gap: 20px;
+
+      @include for-lg {
+        flex-direction: row;
+        justify-content: center;
+      }
     }
 
     @include for-lg {
