--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -25,36 +25,6 @@
       }
     }
   }
-
-  .membership-slot {
-    width: 100%;
-
-    .membership-slot-widget {
-      border: 2px solid #fff;
-      border-radius: 30px;
-      margin: auto;
-      width: fit-content;
-      padding: 10px 40px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-
-      .slot-circle {
-        overflow: hidden;
-        border-radius: 50%;
-        width: 15px;
-        height: 15px;
-        background-color: #00bf1a;
-        box-shadow: 0 0 0 #00bf1a;
-        animation: pulse 1s infinite;
-      }
-
-      .slot-text {
-        color: #fff;
-        font-style: italic;
-      }
-    }
-  }
 }
 
 .membership-item {
@@ -65,6 +35,12 @@
 
   &:hover {
     .green {
+      transform: translateY(-5px);
+      box-shadow: 0 5px 17px 0 #00bf1a;
+      transition: all 0.5s;
+    }
+
+    .yellow {
       transform: translateY(-5px);
       box-shadow: 0 5px 17px 0 #00bf1a;
       transition: all 0.5s;
@@ -112,6 +88,19 @@
     }
   }
 
+  &.yellow {
+    border: 7px solid #ffdd00;
+    transition: all 0.5s;
+
+    .membership-block-price {
+      color: #ffdd00;
+    }
+
+    .title-shape {
+      background: #ffdd00;
+    }
+  }
+
   &.red {
     border: 7px solid #fc029d;
     transition: all 0.5s;
@@ -149,6 +138,10 @@
         color: #fff;
       }
     }
+
+    .text-muted {
+      opacity: 0.5;
+    }
   }
 
   &-price {
@@ -171,6 +164,61 @@
     &-text {
       font-size: 34px;
       font-weight: 800;
+      font-style: italic;
+    }
+  }
+
+  &-footer-text {
+    text-align: center;
+    margin-top: 30px;
+
+    span {
+      color: #fff;
+    }
+  }
+}
+
+.membership-slot {
+  width: 100%;
+  position: absolute;
+  top: -20px;
+  left: 0;
+  right: 0;
+  z-index: 9;
+
+  .membership-slot-widget {
+    border: 2px solid #fff;
+    border-radius: 30px;
+    margin: auto;
+    width: fit-content;
+    padding: 10px 40px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #000;
+    z-index: 9;
+
+    .slot-circle {
+      overflow: hidden;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+
+      &.slot-green {
+        background-color: #00bf1a;
+        box-shadow: 0 0 0 #00bf1a;
+        animation: pulse-green 1s infinite;
+      }
+
+      &.slot-red {
+        background-color: #fe0000;
+        box-shadow: 0 0 0 #fe0000;
+        animation: pulse-red 1s infinite;
+      }
+    }
+
+    .slot-text {
+      color: #fff;
       font-style: italic;
     }
   }
@@ -428,7 +476,7 @@
   }
 }
 
-@-webkit-keyframes pulse {
+@-webkit-keyframes pulse-green {
   0% {
     -webkit-box-shadow: 0 0 0 0 rgb(0, 191, 26);
   }
@@ -439,7 +487,7 @@
     -webkit-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
   }
 }
-@keyframes pulse {
+@keyframes pulse-green {
   0% {
     -moz-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
     box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
@@ -447,6 +495,32 @@
   50% {
     -moz-box-shadow: 0 0 0 5px rgba(0, 191, 26, 0.5);
     box-shadow: 0 0 0 5px rgba(0, 191, 26, 0.5);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+    box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+  }
+}
+
+@-webkit-keyframes pulse-red {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgb(254, 0, 0);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 5px rgba(254, 0, 0, 0.5);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+  }
+}
+@keyframes pulse-red {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+    box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
+  }
+  50% {
+    -moz-box-shadow: 0 0 0 5px  rgba(254, 0, 0, 0.5);
+    box-shadow: 0 0 0 5px  rgba(254, 0, 0, 0.5);
   }
   100% {
     -moz-box-shadow: 0 0 0 0 rgba(0, 191, 26, 0);
